# kinetics-pipeline

./: .checkov.yaml  .dvcignore  .gitignore  Makefile  README.md
.github/actions/opa-policy/: action.yml
.github/actions/setup-terragrunt/: action.yml
.github/workflows/: actionlint.yml  aws-oidc-test.yml  cluster-bootstrap.yml  code-ql.yml  codeql.yml  docker-build.yml  frontend-deploy.yml  gitops-connectivity-test.yml  gitops-values.yml  python-lint.yml  python-test.yml  terraform-apply.yml  terraform-lint.yml  terraform-plan.yml  terraform-scan.yml  terraform-validate.yml  update-gitops-infra.yml  update-gitops.yml
cue/: schema.cue
cue.mod/: module.cue
data/: README.md  build_manifest.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  main.jsx  styles.css
gitops/apps/: ack-sagemaker.yaml  dcgm-exporter.yaml  fsx-csi-driver.yaml  karpenter-nodepools.yaml  karpenter.yaml  kinetics-training.yaml  kube-prometheus-stack.yaml
gitops/karpenter/: ec2nodeclass.yaml  nodepool.yaml
helm/training-job/: Chart.yaml  values.yaml
helm/training-job/templates/: _helpers.tpl  fsx-pvc.yaml  hyperpod-pytorchjob.yaml
policy/: docker.rego  docker_test.rego  terraform.rego  terraform_test.rego
scripts/: bootstrap-cluster-access.sh  bootstrap-runner.sh  build-image.sh  scale-gpus.sh  setup-github-ci.sh  setup_dvc.sh  stage-data.sh  sync-gitops-values.sh  teardown.sh  validate-manifests.sh  vpn-connect.sh
terraform/: .terraform.lock.hcl  .tflint.hcl  frontend-deploy-role.tf  main.tf  outputs.tf  root.hcl  terraform.tfvars.kafka  terraform.tfvars.prod  terraform.tfvars.test  tfplan  variables.tf  versions.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/cluster/: .terraform.lock.hcl  main.tf  remote_state.tf  terraform.tfvars.prod  variables.tf  versions.tf
terraform/infra/: .terraform.lock.hcl  .tflint.hcl  client-vpn-saml-metadata.xml  gitops-contract.tf  main.tf  outputs.tf  remote_state.tf  terraform.tfvars.novpn  terraform.tfvars.prod  terraform.tfvars.test  variables.tf  versions.tf
terraform/live/dev/: env.hcl
terraform/live/prod/: env.hcl
terraform/modules/addons/: app-of-apps.yaml.tpl  main.tf  outputs.tf  variables.tf
terraform/network/: main.tf  outputs.tf  terraform.tfvars.prod  variables.tf  versions.tf
terraform/rbac/: ci-deployer.yaml
terraform/runner/: main.tf  remote_state.tf  variables.tf  versions.tf
training/: .dockerignore  Dockerfile  Dockerfile.seldon  Dockerfile.serve  pyproject.toml  requirements.txt  train.py
training/deploy/: deploy_endpoint.py  package_model.py  register_mlflow_model.py  register_model.py  resolve_seldon_uri.py
training/inference/: inference.py
training/local/: README.md  docker-compose.yml  make_dummy_model.py  otel-collector-config.yaml  prometheus.yml
training/src/kinetics_trainer/: __init__.py  checkpoint.py  cli.py  config.py  data.py  distributed.py  engine.py  model.py  observability.py  predictor.py  tracking.py  trainer.py
training/src/kinetics_trainer/etl/: __init__.py  build_shards.py
training/src/kinetics_trainer/serving/: __init__.py  app.py  auth.py  metrics.py  remote_predictor.py  schemas.py  seldon_runtime.py
training/tests/: test_etl_shards.py  test_remote_predictor.py  test_seldon_model_resolver.py  test_seldon_runtime.py  test_serving.py  test_smoke.py
(+93 files in other folders)
